--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -5,13 +5,11 @@
     <a [title]="product.name + ' details'">{{ product.name }}</a>
   </h3>
 
-  <p *ngIf="product.description">
-    Description: {{ product.description }}
-  </p>
+  <p *ngIf="product.description">Description: {{ product.description }}</p>
 
-  <button type="button" (click)="share()">
-    Share
-  </button>
+  <button type="button" (click)="share()">Share</button>
+
+  <app-product-alerts [product]="product"></app-product-alerts>
 </div>
 
 <!-- 
